--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.org.springframework=debug
+spring.profiles.active=dev
 
+currency-service.url=https://dummy.org/
+currency-service.username=DUMMY_USERNAME_DEFAULT
+currency-service.key=DUMMY_KEY_DEFAULT
