--- a/learn-spring-boot/src/main/resources/application.properties
+++ b/learn-spring-boot/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-logging.level.org.springframework=debug
-spring.profiles.active=dev
+logging.level.org.springframework=info
+spring.profiles.active=
 
 currency-service.url=https://dummy.org/
 currency-service.username=DUMMY_USERNAME_DEFAULT
 currency-service.key=DUMMY_KEY_DEFAULT
+
+management.endpoints.web.exposure.include=health,metrics
