--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=info
 logging.level.com.in28minutes.springboot.myfirstwebapp=info
 
-spring.mvc.format.date=dd/MM/yyyy
+spring.mvc.format.date==yyyy-MM-dd
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
