--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #logging.level.org.springframework=debug
 management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.mvc.format.date==yyyy-MM-dd
+#spring.jpa.show-sql=true
