--- a/fullstack-spring-react-todo-app/frontend/package.json
+++ b/fullstack-spring-react-todo-app/frontend/package.json
@@ -16,9 +16,9 @@
     "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "sass": "^1.70.0"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
