--- a/fullstack-spring-react-todo-app/backend/src/main/resources/application.properties
+++ b/fullstack-spring-react-todo-app/backend/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 #spring.security.user.name=Caio-HBS
 #spring.security.user.password=123
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
