--- a/fullstack-spring-react-todo-app/backend/src/main/resources/application.properties
+++ b/fullstack-spring-react-todo-app/backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 #spring.security.user.password=123
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.defer-datasource-initialization=true
