added new way to save user details

--- a/learn-spring-security/src/main/resources/application.properties
+++ b/learn-spring-security/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=learn-spring-security
-spring.security.user.name=Caio-HBS
-spring.security.user.password=123
+
+#spring.security.user.name=Caio-HBS
+#spring.security.user.password=123
