added h2 database to store user details

--- a/learn-spring-security/src/main/resources/application.properties
+++ b/learn-spring-security/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=learn-spring-security
 
 #spring.security.user.name=Caio-HBS
 #spring.security.user.password=123
+
+spring.datasource.url=jdbc:h2:mem:testdb
